[gd_scene load_steps=9 format=3]

[ext_resource type="Script" path="res://scripts/character/CharacterCreationRoot.gd" id="1_0"]
[ext_resource type="PackedScene" path="res://scenes/character/tabs/TabNavigation.tscn" id="2_0"]
[ext_resource type="Theme" path="res://assets/themes/dark_fantasy_theme.tres" id="3_0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
resource_name = "bg3_sidebar_border"
bg_color = Color(0.062745, 0.062745, 0.062745, 1)
border_width_right = 2
border_color = Color(1, 0.843137, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
resource_name = "bg3_preview_panel"
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 1)
border_width_left = 2
border_color = Color(1, 0.843137, 0, 1)

[node name="CharacterCreationRoot" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_0")
script = ExtResource("1_0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.0588235, 0.0588235, 1)
theme = ExtResource("3_0")

[node name="MainHBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="MainHBox"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
custom_minimum_size = Vector2(320, 0)

[node name="SidebarBorder" type="Panel" parent="MainHBox/MarginContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainHBox/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabNavigation" parent="MainHBox/MarginContainer/VBoxContainer" instance=ExtResource("2_0")]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="center_area" type="VBoxContainer" parent="MainHBox/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="MarginContainer3" type="MarginContainer" parent="MainHBox/MarginContainer2/center_area"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 80

[node name="CurrentTabContainer" type="Control" parent="MainHBox/MarginContainer2/center_area/MarginContainer3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer4" type="MarginContainer" parent="MainHBox"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
custom_minimum_size = Vector2(420, 0)

[node name="PreviewBorder" type="Panel" parent="MainHBox/MarginContainer4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2")
mouse_filter = 2

[node name="PreviewMargin" type="MarginContainer" parent="MainHBox/MarginContainer4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MainHBox/MarginContainer4/PreviewMargin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 24


[node name="Subtitle" type="Label" parent="MainHBox/MarginContainer4/PreviewMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.662745, 0.662745, 0.662745, 1)
text = "Select a race"
horizontal_alignment = 1

[node name="Description" type="RichTextLabel" parent="MainHBox/MarginContainer4/PreviewMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
fit_content = false
scroll_active = true
theme_override_font_sizes/normal_font_size = 16
theme_override_colors/default_color = Color(0.831373, 0.831373, 0.831373, 1)
autowrap_mode = 3

[node name="SpeedSize" type="Label" parent="MainHBox/MarginContainer4/PreviewMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.827451, 0.827451, 0.827451, 1)
text = ""
horizontal_alignment = 1

[node name="AbilityScores" type="RichTextLabel" parent="MainHBox/MarginContainer4/PreviewMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
bbcode_enabled = true
fit_content = true
scroll_active = false
theme_override_font_sizes/normal_font_size = 16
theme_override_colors/default_color = Color(0.831373, 0.831373, 0.831373, 1)
horizontal_alignment = 1
autowrap_mode = 3

[node name="FeaturesTitle" type="Label" parent="MainHBox/MarginContainer4/PreviewMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
text = "Features"
horizontal_alignment = 1

[node name="FeaturesList" type="ItemList" parent="MainHBox/MarginContainer4/PreviewMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
fixed_icon_size = Vector2(0, 0)
allow_reselect = false
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.831373, 0.831373, 0.831373, 1)

[connection signal="tab_changed" from="MainHBox/MarginContainer/VBoxContainer/TabNavigation" to="." method="_on_tab_changed"]
